Change quantity increment message position to prevent wrapping
Fixes 586, 583

--- a/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_listView.scss
+++ b/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_listView.scss
@@ -39,6 +39,11 @@ $list-image__margin--desktop: $indent__m;
     @include min-screen($screen__l) {
       position: relative;
       overflow-x: visible;
+      flex-direction: column;
+
+      p {
+        order: 1;
+      }
     }
   }
 
